Code updated Categories Api's - Cart Module
