# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\ProductController;
+use App\Http\Controllers\CategoryController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -27,16 +28,23 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
 
 //Products
 Route::prefix('product')->middleware('auth:api')->group(function () {
-    Route::get('/test'                      ,[App\Http\Controllers\Api\V1\ProductController::class   , 'test']);
-    Route::get('/fake'                      ,[App\Http\Controllers\Api\V1\ProductController::class   , 'factory']);
-    Route::get('/all'                       ,[App\Http\Controllers\Api\V1\ProductController::class   , 'viewAll']);
-    Route::get('/delete-records/{limit}'    ,[App\Http\Controllers\Api\V1\ProductController::class   , 'destroyRecords']);
-    Route::get('/truncate'                  ,[App\Http\Controllers\Api\V1\ProductController::class   , 'truncate']);
-    Route::post('/store'                    ,[App\Http\Controllers\Api\V1\ProductController::class   , 'store']);
-    Route::post('/update/{id}'              ,[App\Http\Controllers\Api\V1\ProductController::class   , 'update']);
-    Route::delete('/delete/{id}'            ,[App\Http\Controllers\Api\V1\ProductController::class   , 'destroy']);
-
+    Route::get(   '/test'                        ,[App\Http\Controllers\Api\V1\ProductController::class , 'test']);
+    Route::get(   '/fake'                        ,[App\Http\Controllers\Api\V1\ProductController::class , 'factory']);
+    Route::get(   '/all'                         ,[App\Http\Controllers\Api\V1\ProductController::class , 'viewAll']);
+    Route::get(   '/delete-records/{limit}'      ,[App\Http\Controllers\Api\V1\ProductController::class , 'destroyRecords']);
+    Route::get(   '/truncate'                    ,[App\Http\Controllers\Api\V1\ProductController::class , 'truncate']);
+    Route::post(  '/store'                       ,[App\Http\Controllers\Api\V1\ProductController::class , 'store']);
+    Route::post(  '/update/{id}'                 ,[App\Http\Controllers\Api\V1\ProductController::class , 'update']);
+    Route::delete('/delete/{id}'                 ,[App\Http\Controllers\Api\V1\ProductController::class , 'destroy']);
 });
 
+//Products
+Route::prefix('category')->middleware('auth:api')->group(function () {
+    Route::get(   '/all'                        ,[App\Http\Controllers\Api\V1\CategoryController::class , 'viewAll']);
+    Route::get(   '/edit/{id}'                  ,[App\Http\Controllers\Api\V1\CategoryController::class , 'edit']);
+    Route::post(  '/store'                      ,[App\Http\Controllers\Api\V1\CategoryController::class , 'store']);
+    Route::post(  '/update/{id}'                ,[App\Http\Controllers\Api\V1\CategoryController::class , 'update']);
+    Route::post(  '/delete/{id}'                ,[App\Http\Controllers\Api\V1\CategoryController::class , 'destroy']);
+});
 
 
