# storage/api-docs/api-docs.json
@@ -19,6 +19,144 @@
         }
     ],
     "paths": {
+        "/category/all": {
+            "get": {
+                "tags": [
+                    "Category Api's"
+                ],
+                "summary": "Get all categories",
+                "description": "Get all categoriess",
+                "operationId": "viewAllcategory",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/category/store": {
+            "post": {
+                "tags": [
+                    "Category Api's"
+                ],
+                "summary": "Add category",
+                "description": "Returns Success after category creation",
+                "operationId": "addCategory",
+                "parameters": [
+                    {
+                        "name": "cat_name",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "parent_category",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/category/update/{id}": {
+            "post": {
+                "tags": [
+                    "Category Api's"
+                ],
+                "summary": "Update category",
+                "description": "Returns Success after category creation",
+                "operationId": "updateCategory",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "cat_name",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "parent_category",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/category/delete/{id}": {
+            "delete": {
+                "tags": [
+                    "Category Api's"
+                ],
+                "summary": "Delete category by id",
+                "description": "Delete category according your given id",
+                "operationId": "DeleteCategory",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/product/fake": {
             "get": {
                 "tags": [
@@ -230,6 +368,27 @@
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/product/truncate": {
+            "get": {
+                "tags": [
+                    "Product Api's"
+                ],
+                "summary": "Truncate Product 'Reset product table' ",
+                "description": "Truncate Product 'Reset product table'.",
+                "operationId": "truncateProduct",
                 "responses": {
                     "200": {
                         "description": "Successful operation"
